--- a/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
+++ b/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
@@ -33,7 +33,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href=""><img src="assets/logo@4x.png" width="50" height="50"/>
+                    <a class="navbar-brand" href=""><img src="" width="50" height="50"/>
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
@@ -63,18 +63,18 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="" alt="Image">
+                            <img src="assets/long logo@4x.png" alt="Image">
                             <div class="carousel-caption">
-                                <h3>Ecobadge</h3>
-                                <p>Money Money.</p>
+                                <h3></h3>
+                                <p></p>
                             </div>
                         </div>
 
                         <div class="item">
-                            <img src="https://placehold.it/800x400?text=Another Image Maybe" alt="Image">
+                            <img src="assets/Tiers.PNG" alt="Image">
                             <div class="carousel-caption">
-                                <h3>More Sell $</h3>
-                                <p>Lorem ipsum...</p>
+                                <h3></h3>
+                                <p></p>
                             </div>
                         </div>
                     </div>
