--- a/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
+++ b/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="assets/logo@4x.png">
     <style>
 
@@ -33,8 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href=""><img src="" width="50" height="50"/>
-                    </a>
+                    <a class="navbar-brand" href="">Logo</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
@@ -92,7 +92,8 @@
             </div>
             <div class="col-sm-4">
                 <div class="well">
-                    <p>Some text..</p>
+                    <p><a href="aboutus.html"></a>Learn More about our mission</p>
+                    <button type="button">Block Button</button>
                 </div>
                 <div class="well">
                     <p>Upcoming Events..</p>
@@ -106,7 +107,7 @@
     </div>
 
     <div class="container text-center">
-        <h3>What We Do</h3>
+        <h3>View Directory</h3>
         <br>
         <div class="row">
             <div class="col-sm-3">
@@ -138,39 +139,43 @@
     </div>
 
     <div class="container text-center">
-        <h3>Our Partners</h3>
+        <h3>Tiers</h3>
         <br>
         <div class="row">
             <div class="col-sm-2">
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-                <p>Partner 1</p>
+                <img src="assets/seed@4x.png" class="img-responsive" style="width:100%" alt="Image">
+                <p>Seed</p>
             </div>
             <div class="col-sm-2">
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-                <p>Partner 2</p>
+                <img src="assets/seedling@4x.png"  class="img-responsive" style="width:100%" alt="Image">
+                <p>Seedling</p>
             </div>
             <div class="col-sm-2">
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-                <p>Partner 3</p>
+                <img src="assets/sapling@4x.png" class="img-responsive" style="width:100%" alt="Image">
+                <p>Sapling</p>
             </div>
             <div class="col-sm-2">
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-                <p>Partner 4</p>
-            </div>
-            <div class="col-sm-2">
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-                <p>Partner 5</p>
-            </div>
-            <div class="col-sm-2">
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-                <p>Partner 6</p>
+                <img src="assets/tree@4x.png" class="img-responsive" style="width:100%" alt="Image">
+                <p>Tree</p>
             </div>
         </div>
     </div><br>
 
-    <footer class="container-fluid text-center">
-        <p>Footer Text</p>
-    </footer>
+          <footer class="container-fluid text-center">
+              <p>
+                  Contact Email: info.ECO Badge@gmail.com
+              </p>
+              <p>
+                  Terms and Conditions: View our T&Cs
+              </p>
+              <p>
+                  Mailing list Conditions: View what our Mailing list includes
+              </p>
+              <!-- Font awesome icons -->
+              <a href="#" class="fa fa-facebook"></a>
+              <a href="#" class="fa fa-twitter"></a>
+              <a href="#" class="fa fa-linkedin"></a>
+          </footer>
 
 </body>
 </html>
