--- a/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
+++ b/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
@@ -92,8 +92,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="well">
-                    <p><a href="aboutus.html"></a>Learn More about our mission</p>
-                    <button type="button">Block Button</button>
+                    <p><a href="aboutus.html">Learn More about our mission</a></p>
                 </div>
                 <div class="well">
                     <p>Upcoming Events..</p>
@@ -107,7 +106,7 @@
     </div>
 
     <div class="container text-center">
-        <h3>View Directory</h3>
+        <h3><a href="directory.html">View Directory</a></h3>
         <br>
         <div class="row">
             <div class="col-sm-3">
@@ -158,9 +157,16 @@
                 <img src="assets/tree@4x.png" class="img-responsive" style="width:100%" alt="Image">
                 <p>Tree</p>
             </div>
+            <div class="col-sm-2">
+                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+                <p>Partner 5</p>
+            </div>
+            <div class="col-sm-2">
+                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+                <p>Partner 6</p>
+            </div>
         </div>
     </div><br>
-
           <footer class="container-fluid text-center">
               <p>
                   Contact Email: info.ECO Badge@gmail.com
