--- a/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
+++ b/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
@@ -92,7 +92,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="well">
-                    <p><a href="aboutus.html">Learn More about our mission</a></p>
+                    <p><a href="aboutus.html" class="btn btn-primary btn-lg active" role="button">Learn More About Our Mission</a></p>
                 </div>
                 <div class="well">
                     <p>Upcoming Events..</p>
@@ -143,19 +143,19 @@
         <div class="row">
             <div class="col-sm-2">
                 <img src="assets/seed@4x.png" class="img-responsive" style="width:100%" alt="Image">
-                <p>Seed</p>
+                <p>The Lowest Tier</p>
             </div>
             <div class="col-sm-2">
                 <img src="assets/seedling@4x.png"  class="img-responsive" style="width:100%" alt="Image">
-                <p>Seedling</p>
+                <p>The Second Lowest Tier</p>
             </div>
             <div class="col-sm-2">
                 <img src="assets/sapling@4x.png" class="img-responsive" style="width:100%" alt="Image">
-                <p>Sapling</p>
+                <p>The Second Highest Tier</p>
             </div>
             <div class="col-sm-2">
                 <img src="assets/tree@4x.png" class="img-responsive" style="width:100%" alt="Image">
-                <p>Tree</p>
+                <p>The Highest Tier</p>
             </div>
             <div class="col-sm-2">
                 <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
