--- a/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
+++ b/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
@@ -92,7 +92,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="well">
-                    <p><a href="aboutus.html" class="btn btn-primary btn-lg active" role="button">Learn More About Our Mission</a></p>
+                    <a href="aboutus.html"><button class="btn">Learn More About Our Mission</button></a>
                 </div>
                 <div class="well">
                     <p>Upcoming Events..</p>
