--- a/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
+++ b/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
@@ -106,41 +106,25 @@
     </div>
 
     <div class="container text-center">
-        <h3><a href="directory.html">View Directory</a></h3>
+        <h3><a href="directory.html"><button class="btn">View Directory</button></a></h3>
         <br>
-        <div class="row">
-            <div class="col-sm-3">
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-                <p>Current Project</p>
+        <div style="display: flex; justify-content: space-around">
+            <div class="preview">
+                <img src="assets/Directory.PNG" class="img-responsive" style="width:100%" alt="Image">
             </div>
-            <div class="col-sm-3">
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-                <p>Project 2</p>
-            </div>
-            <div class="col-sm-3">
+            <!--<div class="col-sm-4">
                 <div class="well">
-                    <p>Some text..</p>
+                    <p>Snippet of the Directory</p>
                 </div>
-                <div class="well">
-                    <p>Some text..</p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="well">
-                    <p>Some text..</p>
-                </div>
-                <div class="well">
-                    <p>Some text..</p>
-                </div>
-            </div>
+            </div>-->
         </div>
         <hr>
     </div>
 
     <div class="container text-center">
-        <h3>Tiers</h3>
+        <h3>Our Tiers</h3>
         <br>
-        <div class="row">
+        <div style="display: flex; justify-content: space-around">
             <div class="col-sm-2">
                 <img src="assets/seed@4x.png" class="img-responsive" style="width:100%" alt="Image">
                 <p>The Lowest Tier</p>
@@ -157,16 +141,8 @@
                 <img src="assets/tree@4x.png" class="img-responsive" style="width:100%" alt="Image">
                 <p>The Highest Tier</p>
             </div>
-            <div class="col-sm-2">
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-                <p>Partner 5</p>
-            </div>
-            <div class="col-sm-2">
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-                <p>Partner 6</p>
-            </div>
         </div>
-    </div><br>
+    </div>
           <footer class="container-fluid text-center">
               <p>
                   Contact Email: info.ECO Badge@gmail.com
