--- a/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
+++ b/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/Index.html
@@ -91,14 +91,11 @@
                 </div>
             </div>
             <div class="col-sm-4">
+                <div class="blurb">
+                    <p>A little blurb</p>
+                </div>
                 <div class="well">
                     <a href="aboutus.html"><button class="btn">Learn More About Our Mission</button></a>
-                </div>
-                <div class="well">
-                    <p>Upcoming Events..</p>
-                </div>
-                <div class="well">
-                    <p>Visit Our Blog</p>
                 </div>
             </div>
         </div>
