--- a/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/aboutus.html
+++ b/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/aboutus.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="assets/logo@4x.png">
     <style>
         /* Add a gray background color and some padding to the footer */
@@ -53,5 +54,83 @@
             </div>
         </div>
     </nav>
+
+    <div class="container text-center">
+        <br>
+        <div class="col-sm-2">
+            <div class="whiteblurb">
+            </div>
+        </div>
+        <!-- start of image1 -->
+        <div class="col-sm-3">
+            <div class="blurb">
+                <p>image</p>
+            </div>
+        </div>
+        <!-- end of image1 -->
+        <div class="col-sm-5">
+            <p>Meet the team behind the journey</p>
+            <div class="blurb">
+                <p>Have a question? Click here to Email us!</p>
+            </div>
+        </div>
+        <div class="col-sm-2">
+            <div class="whiteblurb">
+            </div>
+        </div>
+    </div>
+
+    <div class="container text-center">
+        <br>
+        <div class="col-sm-2">
+            <div class="whiteblurb">
+            </div>
+        </div>
+        <div class="col-sm-5">
+            <p>What's on the horizon?</p>
+            <div class="blurb">
+                <p>Interested in learning more? Join our Mailing List!</p>
+            </div>
+        </div>
+        <!-- start of image2 -->
+        <div class="col-sm-3">
+            <div class="blurb">
+                <p>image</p>
+            </div>
+        </div>
+        <!-- end of image2 -->
+        <div class="col-sm-2">
+            <div class="whiteblurb">
+            </div>
+        </div>
+    </div>
+    <hr>
+
+    <div class="container text-center">
+        <h3>How Tiers Work</h3>
+        <br>
+        <div style="display: flex; justify-content: space-around">
+            <div class="col-sm-8">
+                <div class="blurb">
+                    <p>explanation of EcoBadge's tier's system</p>
+                </div>
+            </div>
+        </div>
+    </div>
+          <footer class="container-fluid text-center">
+              <p>
+                  Contact Email: info.ECO Badge@gmail.com
+              </p>
+              <p>
+                  Terms and Conditions: View our T&Cs
+              </p>
+              <p>
+                  Mailing list Conditions: View what our Mailing list includes
+              </p>
+              <!-- Font awesome icons -->
+              <a href="#" class="fa fa-facebook"></a>
+              <a href="#" class="fa fa-twitter"></a>
+              <a href="#" class="fa fa-linkedin"></a>
+          </footer>
 </body>
 </html>
