--- a/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/directory.html
+++ b/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/directory.html
@@ -5,31 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="icon" href="assets/logo@4x.png">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         /* Add a gray background color and some padding to the footer */
         footer {
             background-color: #ffffff;
             padding: 25px;
         }
-
-        .carousel-inner img {
-            width: 100%; /* Set width to 100% */
-            min-height: 200px;
-        }
-
-        /* Hide the carousel text when the screen is less than 600 pixels wide */
-        @media (max-width: 600px) {
-            .carousel-caption {
-                display: none;
-            }
-        }
     </style>
 </head>
 <body>
+
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -38,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Logo</a>
+                <a class="navbar-brand" href="">Logo</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
@@ -53,5 +41,95 @@
             </div>
         </div>
     </nav>
+
+
+
+    <div class="container">
+        <h1>Search by...</h1>
+
+
+        <div class="dropdown">
+            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+                Location
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href="#">Plymouth</a></li>
+                <li><a href="#">Exeter</a></li>
+                <li><a href="#">Bristol</a></li>
+            </ul>
+        </div>
+
+        <div class="dropdown">
+            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+                Cuisine
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href="#">Burgers</a></li>
+                <li><a href="#">Chicken</a></li>
+                <li><a href="#">Pizza</a></li>
+            </ul>
+        </div>
+
+        <div class="dropdown">
+            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+                Eco Badge Tier
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href="#">Platinum</a></li>
+                <li><a href="#">Gold</a></li>
+                <li><a href="#">Silver</a></li>
+                <li><a href="#">Bronze</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="container">
+        <form action="/action_page.php">
+            <input type="checkbox" id="<20%plastic" name="<20%plastic" value="1">
+            <label for="<20%plastic"><20% single use plastic</label><br>
+            <input type="checkbox" id=">80%recycled" name=">80%recycled" value="1">
+            <label for=">80%recycled"> >80% recycled waste</label><br>
+            <input type="checkbox" id="carbonneutral" name="carbonneutral" value="1">
+            <label for="carbonneutral"> Carbon neutral</label><br>
+            <input type="checkbox" id="renewableenergy" name="renewableenergy" value="1">
+            <label for="renewableenergy"> Uses renewable energy</label><br><br>
+        </form>
+    </div>
+    <div class="container">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>Resturant Name</th>
+                    <th>Location</th>
+                    <th>Cuisine</th>
+                    <th>Eco Badge Tier</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Bob's Burgers</td>
+                    <td>Union street</td>
+                    <td>Burgers,Chicken</td>
+                    <td>Gold</td>
+                </tr>
+                <tr>
+                    <td>Mcdonalds</td>
+                    <td>New George street</td>
+                    <td>Burgers,Chicken</td>
+                    <td>Platinum</td>
+                </tr>
+                <tr>
+                    <td>KFC</td>
+                    <td>Mutley Plain</td>
+                    <td>Chicken</td>
+                    <td>Silver</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+
 </body>
 </html>
